Задал блоку описанию программы внутренний отступ вместо внешнего, потому что он ни от кого не отталкивается

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1059,12 +1059,12 @@ body {
 
 @media (min-width: 769px) {
   .program__wrapper-description {
-    margin-left: 88px;
+    padding-left: 88px;
   }
 }
 @media (min-width: 1440px) {
   .program__wrapper-description {
-    margin-left: 80px;
+    padding-left: 80px;
   }
 }
 
