--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -17,6 +17,7 @@ $color-4: #f2f2f2;
 $color-5: #444444;
 $color-6: #eaeaea;
 $color-7: #d9d9d9;
+$color-8: #cdcdcd;
 
 /* === background-colors === */
 $background-color-1: #000000;
@@ -26,6 +27,7 @@ $background-color-4: #f2f2f2;
 $background-color-5: #444444;
 $background-color-6: #eaeaea;
 $background-color-7: #d9d9d9;
+$background-color-8: #cdcdcd;
 
 /* === fonts-mobile === */
 $font-site-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
@@ -33,8 +35,10 @@ $font-site-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
 $font-title-large-mobile: 200 3.6rem/1 "Oswald", Arial, sans-serif;
 $font-title-medium-mobile: 200 3.6rem/1.11 "Oswald", Arial, sans-serif;
 $font-title-small-mobile: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
+$font-title-extra-small-mobile: 200 2.4rem/1 "Oswald", Arial, sans-serif;
 
 $font-text-small-mobile: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+$font-text-extra-small-mobile: 200 1.2rem/1 "Lato", Arial, sans-serif;
 
 $font-button-small-mobile: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
 $font-catalog-button-mobile: 200 1.6rem/1 "Oswald", Arial, sans-serif;
@@ -45,8 +49,10 @@ $font-site-list-tablet: 200 1.8rem/1.33 "Oswald", Arial, sans-serif;
 $font-title-large-tablet: 200 6rem/1 "Oswald", Arial, sans-serif;
 $font-title-medium-tablet: 200 6rem/1 "Oswald", Arial, sans-serif;
 $font-title-small-tablet: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+$font-title-extra-small-tablet: 200 3rem/1.23 "Oswald", Arial, sans-serif;
 
 $font-text-small-tablet: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+$font-text-extra-small-tablet: 200 1.4rem/1 "Lato", Arial, sans-serif;
 
 $font-button-small-tablet: 200 2rem/1 "Oswald", Arial, sans-serif;
 $font-catalog-button-tablet: 200 2rem / normal "Oswald", Arial, sans-serif;
@@ -57,8 +63,10 @@ $font-site-list-desktop: 200 2rem/1 "Oswald", Arial, sans-serif;
 $font-title-large-desktop: 200 6rem/1 "Oswald", Arial, sans-serif;
 $font-title-medium-desktop: 200 6rem/1 "Oswald", Arial, sans-serif;
 $font-title-small-desktop: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+$font-title-extra-small-desktop: 200 3rem/1.23 "Oswald", Arial, sans-serif;
 
 $font-text-small-desktop: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+$font-text-extra-small-desktop: 200 1.4rem/1 "Lato", Arial, sans-serif;
 
 /* force-state elements */
 $background-color-3-hover: #5eaa2f;
