--- a/src/sass/blocks/example.scss
+++ b/src/sass/blocks/example.scss
@@ -1,6 +1,10 @@
 .example {
   background-color: $background-color-6;
 
+  @media (min-width: $tablet-width) {
+    background: $background-color-2;
+  }
+
   @media (min-width: $desktop-width) {
     background-color: $background-color-4;
   }
@@ -33,6 +37,12 @@
 
 .example__title {
   @include indent-reset;
+
+  margin-bottom: 40px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 63px;
+  }
 }
 
 .example__text {
@@ -41,8 +51,12 @@
   width: 280px;
   color: $color-5;
 
+  margin-bottom: 20px;
+
   @media (min-width: $tablet-width) {
     width: 708px;
+
+    margin-bottom: 54px;
   }
 
   @media (min-width: $desktop-width) {
@@ -51,7 +65,22 @@
 }
 
 .example__list {
+  @include indent-reset;
+
   display: flex;
+  justify-content: space-between;
+
+  margin-bottom: 34px;
+
+  @media (min-width: $tablet-width) {
+    width: 366px;
+
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 60px;
+  }
 }
 
 .example__item {
@@ -61,11 +90,33 @@
   align-items: center;
 
   border: 1px solid $background-color-8;
+  border-radius: 5px;
 
   position: relative;
 
   width: 124px;
   min-height: 56px;
+
+  @media (min-width: $tablet-width) {
+    width: 162px;
+    min-height: 77px;
+  }
+
+  &:first-child .example__description {
+    @media (min-width: $tablet-width) {
+      width: 110px;
+
+      bottom: -6px;
+    }
+  }
+
+  &:last-child .example__description {
+    @media (min-width: $tablet-width) {
+      width: 135px;
+
+      bottom: -7px;
+    }
+  }
 }
 
 .example__heading {
@@ -84,5 +135,81 @@
   background-color: $background-color-6;
 
   position: absolute;
-  bottom: 0;
+  bottom: -16px;
+
+  width: 84px;
+
+  @media (min-width: $tablet-width) {
+    br {
+      display: none;
+    }
+
+    background-color: $background-color-2;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: $background-color-4;
+  }
+}
+
+.example__description-content {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.example__result {
+  display: flex;
+  justify-content: center;
+
+  margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+
+    flex-direction: column;
+
+    text-align: right;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+  }
+}
+
+.example__expenses {
+  @include indent-reset;
+
+  font: 200 1.4rem/1.42 "Oswald", Arial, sans-serif;
+  text-transform: uppercase;
+
+  margin-right: 3px;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 0;
+    margin-bottom: 9px;
+
+    font: 200 2rem/1 "Oswald", Arial, sans-serif;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+    margin-right: 63px;
+  }
+}
+
+.example__price {
+  font: 200 1.4rem/1.42 "Oswald", Arial, sans-serif;
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font: 200 2rem/1 "Oswald", Arial, sans-serif;
+  }
 }
