--- a/src/sass/blocks/work-principle.scss
+++ b/src/sass/blocks/work-principle.scss
@@ -1,3 +1,19 @@
+.work-principle {
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    &::after {
+      content: "";
+      display: block;
+
+      width: 100%;
+      height: 1px;
+
+      background-color: $background-color-9;
+
+      margin-bottom: 30px;
+    }
+  }
+}
+
 .work-principle__wrapper {
   width: $mobile-width;
 
