--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -18,6 +18,7 @@ $color-5: #444444;
 $color-6: #eaeaea;
 $color-7: #d9d9d9;
 $color-8: #cdcdcd;
+$color-9: #e6e6e6;
 
 /* === background-colors === */
 $background-color-1: #000000;
@@ -28,6 +29,7 @@ $background-color-5: #444444;
 $background-color-6: #eaeaea;
 $background-color-7: #d9d9d9;
 $background-color-8: #cdcdcd;
+$background-color-9: #e6e6e6;
 
 /* === fonts-mobile === */
 $font-site-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
