Сделал стилизацию блока локация для всех состояний

--- a/src/sass/blocks/location.scss
+++ b/src/sass/blocks/location.scss
@@ -1,15 +1,24 @@
+.location__wrapper {
+  position: relative;
+}
+
 .location__address-wrapper {
   width: $mobile-width;
   min-height: 112px;
 
-  padding: 0 20px;
+  padding: 20px 26px;
   margin: 0 auto;
 
   display: flex;
+  align-items: center;
+
+  background-color: $background-color-2;
 
   @media (min-width: $tablet-width) {
     width: $tablet-width;
     min-height: 199px;
+
+    justify-content: space-between;
 
     padding: 0 70px;
   }
@@ -17,6 +26,54 @@
   @media (min-width: $desktop-width) {
     width: 565px;
 
-    padding: 0 80px;
+    padding: 56px 60px 56px 80px;
+
+    position: absolute;
+    top: 95px;
+    left: 110px;
+  }
+}
+
+.location__address-wrapper-title {
+  @include indent-reset;
+
+  font: 200 1.6rem/1.25 "Oswald", Arial, sans-serif;
+  color: $color-10;
+  text-transform: uppercase;
+
+  width: 139px;
+
+  margin-right: 15px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 2rem;
+    line-height: 1.3;
+  }
+}
+
+.location__address {
+  font: $font-text-small-mobile;
+  line-height: 1.42;
+  color: $color-5;
+
+  @media (min-width: $tablet-width) {
+    font: $font-text-small-tablet;
+    font-size: 1.6rem;
+    line-height: 1.25;
+    text-align: right;
+
+    width: 160px;
+  }
+
+  @media (min-width: $tablet-width) {
+    text-align: left;
+  }
+}
+
+.location__address-place {
+  @include indent-reset;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 26px;
   }
 }
