--- a/src/css/style.css
+++ b/src/css/style.css
@@ -731,24 +731,80 @@ body {
   }
 }
 
+.location__wrapper {
+  position: relative;
+}
+
 .location__address-wrapper {
   width: 320px;
   min-height: 112px;
-  padding: 0 20px;
+  padding: 20px 26px;
   margin: 0 auto;
   display: flex;
+  align-items: center;
+  background-color: #ffffff;
 }
 @media (min-width: 769px) {
   .location__address-wrapper {
     width: 769px;
     min-height: 199px;
+    justify-content: space-between;
     padding: 0 70px;
   }
 }
 @media (min-width: 1440px) {
   .location__address-wrapper {
     width: 565px;
-    padding: 0 80px;
+    padding: 56px 60px 56px 80px;
+    position: absolute;
+    top: 95px;
+    left: 110px;
+  }
+}
+
+.location__address-wrapper-title {
+  margin: 0;
+  padding: 0;
+  font: 200 1.6rem/1.25 "Oswald", Arial, sans-serif;
+  color: #111111;
+  text-transform: uppercase;
+  width: 139px;
+  margin-right: 15px;
+}
+@media (min-width: 769px) {
+  .location__address-wrapper-title {
+    font-size: 2rem;
+    line-height: 1.3;
+  }
+}
+
+.location__address {
+  font: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+  line-height: 1.42;
+  color: #444444;
+}
+@media (min-width: 769px) {
+  .location__address {
+    font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+    font-size: 1.6rem;
+    line-height: 1.25;
+    text-align: right;
+    width: 160px;
+  }
+}
+@media (min-width: 769px) {
+  .location__address {
+    text-align: left;
+  }
+}
+
+.location__address-place {
+  margin: 0;
+  padding: 0;
+}
+@media (min-width: 769px) {
+  .location__address-place {
+    margin-bottom: 26px;
   }
 }
 
@@ -946,9 +1002,10 @@ body {
   text-transform: uppercase;
 }
 
-.map__image {
+.map__iframe {
   display: block;
-  margin: 0 auto;
+  width: 100%;
+  border: none;
 }
 
 .program-selection__wrapper {
