--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -19,6 +19,7 @@ $color-6: #eaeaea;
 $color-7: #d9d9d9;
 $color-8: #cdcdcd;
 $color-9: #e6e6e6;
+$color-10: #111111;
 
 /* === background-colors === */
 $background-color-1: #000000;
@@ -30,6 +31,7 @@ $background-color-6: #eaeaea;
 $background-color-7: #d9d9d9;
 $background-color-8: #cdcdcd;
 $background-color-9: #e6e6e6;
+$background-color-10: #111111;
 
 /* === fonts-mobile === */
 $font-site-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
