Сделал стилизацию футера для всех состояний, также добавил состояния кнопкам и ссылкам, закончил стилизацию главной страницы

--- a/src/sass/blocks/social.scss
+++ b/src/sass/blocks/social.scss
@@ -2,8 +2,26 @@
   @include list-reset;
 
   display: flex;
+  flex-wrap: wrap;
+  gap: 15px 24px;
+
+  max-width: 140px;
 }
 
 .social__link {
   @include link-reset;
+}
+
+.social__link-icon {
+  &:hover {
+    path {
+      fill: $background-color-3-hover;
+    }
+
+    &:active {
+      path {
+        opacity: 0.3;
+      }
+    }
+  }
 }
