--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -73,4 +73,7 @@ $font-text-small-desktop: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
 $font-text-extra-small-desktop: 200 1.4rem/1 "Lato", Arial, sans-serif;
 
 /* force-state elements */
+$color-3-hover: #68b738;
+$background-color-3-hover: #68b738;
+
 $background-color-3-hover: #5eaa2f;
