--- a/src/css/style.css
+++ b/src/css/style.css
@@ -488,6 +488,26 @@ body {
 .copyright__link {
   color: #000000;
   text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.copyright__link:hover path {
+  fill: #5eaa2f;
+}
+.copyright__link:active {
+  opacity: 0.3;
+}
+@media (min-width: 769px) {
+  .copyright__link {
+    width: 168px;
+  }
+}
+
+.copyright__link-html-academy {
+  font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+  color: #444444;
 }
 
 .description--small {
@@ -808,6 +828,16 @@ body {
   }
 }
 
+.logo__image {
+  display: block;
+}
+.logo__image:hover {
+  opacity: 0.8;
+}
+.logo__image:active {
+  opacity: 0.3;
+}
+
 .main-footer {
   background-color: #f2f2f2;
 }
@@ -820,6 +850,26 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+}
+.main-footer__wrapper::before, .main-footer__wrapper::after {
+  content: "";
+  display: block;
+  background-color: #d9d9d9;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+}
+@media (min-width: 769px) {
+  .main-footer__wrapper::before, .main-footer__wrapper::after {
+    display: none;
+  }
+}
+.main-footer__wrapper::before {
+  top: 84px;
+}
+.main-footer__wrapper::after {
+  top: 146px;
 }
 @media (min-width: 769px) {
   .main-footer__wrapper {
@@ -835,6 +885,15 @@ body {
     width: 1440px;
     min-height: 169px;
     padding: 66px 110px;
+  }
+}
+
+.main-footer__copyright {
+  width: 100%;
+}
+@media (min-width: 769px) {
+  .main-footer__copyright {
+    width: 168px;
   }
 }
 
@@ -1479,11 +1538,21 @@ body {
   padding: 0;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
+  gap: 15px 24px;
+  max-width: 140px;
 }
 
 .social__link {
   color: #000000;
   text-decoration: none;
+}
+
+.social__link-icon:hover path {
+  fill: #5eaa2f;
+}
+.social__link-icon:hover:active path {
+  opacity: 0.3;
 }
 
 .title--large {
