--- a/src/sass/blocks/main-footer.scss
+++ b/src/sass/blocks/main-footer.scss
@@ -13,6 +13,33 @@
   justify-content: space-between;
   align-items: center;
 
+  position: relative;
+
+  &::before,
+  &::after {
+    content: "";
+    display: block;
+
+    background-color: $background-color-7;
+
+    width: 100%;
+    height: 1px;
+
+    position: absolute;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
+  }
+
+  &::before {
+    top: 84px;
+  }
+
+  &::after {
+    top: 146px;
+  }
+
   @media (min-width: $tablet-width) {
     width: $tablet-width;
     min-height: 147px;
@@ -28,5 +55,13 @@
     min-height: 169px;
 
     padding: 66px 110px;
+  }
+}
+
+.main-footer__copyright {
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    width: 168px;
   }
 }
