--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -20,6 +20,8 @@ $color-7: #d9d9d9;
 $color-8: #cdcdcd;
 $color-9: #e6e6e6;
 $color-10: #111111;
+$color-11: #e7e7e7;
+$color-12: #ff8282;
 
 /* === background-colors === */
 $background-color-1: #000000;
@@ -32,6 +34,8 @@ $background-color-7: #d9d9d9;
 $background-color-8: #cdcdcd;
 $background-color-9: #e6e6e6;
 $background-color-10: #111111;
+$background-color-11: #e7e7e7;
+$background-color-12: #ff8282;
 
 /* === fonts-mobile === */
 $font-site-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
@@ -44,8 +48,12 @@ $font-title-extra-small-mobile: 200 2.4rem/1 "Oswald", Arial, sans-serif;
 $font-text-small-mobile: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
 $font-text-extra-small-mobile: 200 1.2rem/1 "Lato", Arial, sans-serif;
 
+$font-description-medium-mobile: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
+
 $font-button-small-mobile: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
 $font-catalog-button-mobile: 200 1.6rem/1 "Oswald", Arial, sans-serif;
+
+$font-field-label-mobile: 200 1.6rem/1.12 "Oswald" Arial, sans-serif;
 
 /* === fonts-tablet === */
 $font-site-list-tablet: 200 1.8rem/1.33 "Oswald", Arial, sans-serif;
@@ -58,8 +66,12 @@ $font-title-extra-small-tablet: 200 3rem/1.23 "Oswald", Arial, sans-serif;
 $font-text-small-tablet: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
 $font-text-extra-small-tablet: 200 1.4rem/1 "Lato", Arial, sans-serif;
 
+$font-description-medium-tablet: 200 2rem/1.5 "Oswald", Arial, sans-serif;
+
 $font-button-small-tablet: 200 2rem/1 "Oswald", Arial, sans-serif;
 $font-catalog-button-tablet: 200 2rem / normal "Oswald", Arial, sans-serif;
+
+$font-field-label-tablet: 200 2rem / normal "Oswald" Arial, sans-serif;
 
 /* === fonts-desktop === */
 $font-site-list-desktop: 200 2rem/1 "Oswald", Arial, sans-serif;
@@ -72,8 +84,9 @@ $font-title-extra-small-desktop: 200 3rem/1.23 "Oswald", Arial, sans-serif;
 $font-text-small-desktop: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
 $font-text-extra-small-desktop: 200 1.4rem/1 "Lato", Arial, sans-serif;
 
-/* force-state elements */
-$color-3-hover: #68b738;
-$background-color-3-hover: #68b738;
+$font-description-medium-desktop: 200 2rem/1.5 "Oswald", Arial, sans-serif;
 
+$font-field-label-desktop: 200 2rem / normal "Oswald" Arial, sans-serif;
+
+/* force-state elements */
 $background-color-3-hover: #5eaa2f;
