--- a/src/sass/blocks/fields-container.scss
+++ b/src/sass/blocks/fields-container.scss
@@ -1,7 +1,12 @@
 .fields-container {
+  @include indent-reset;
+  border: none;
+
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+
+  position: relative;
 
   &--contacts {
     @media (min-width: $desktop-width) {
