--- a/src/sass/blocks/fields-container.scss
+++ b/src/sass/blocks/fields-container.scss
@@ -11,6 +11,8 @@
   &--contacts {
     @media (min-width: $desktop-width) {
       flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
     }
   }
 
