--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -48,3 +48,4 @@
 @import "./blocks/location-address-wrapper.scss";
 @import "./blocks/main-form.scss";
 @import "./blocks/field-label.scss";
+@import "./blocks/textarea.scss";
