--- a/src/sass/blocks/comment.scss
+++ b/src/sass/blocks/comment.scss
@@ -15,3 +15,13 @@
     padding: 0 110px;
   }
 }
+
+.comment__title {
+  @include indent-reset;
+
+  margin-bottom: 38px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 76px;
+  }
+}
