--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -54,6 +54,7 @@ $font-button-small-mobile: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
 $font-catalog-button-mobile: 200 1.6rem/1 "Oswald", Arial, sans-serif;
 
 $font-field-label-mobile: 200 1.6rem/1.12 "Oswald" Arial, sans-serif;
+$font-textarea-mobile: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
 
 /* === fonts-tablet === */
 $font-site-list-tablet: 200 1.8rem/1.33 "Oswald", Arial, sans-serif;
@@ -72,6 +73,7 @@ $font-button-small-tablet: 200 2rem/1 "Oswald", Arial, sans-serif;
 $font-catalog-button-tablet: 200 2rem / normal "Oswald", Arial, sans-serif;
 
 $font-field-label-tablet: 200 2rem / normal "Oswald" Arial, sans-serif;
+$font-textarea-tablet: 200 2rem/1.5 "Oswald", Arial, sans-serif;
 
 /* === fonts-desktop === */
 $font-site-list-desktop: 200 2rem/1 "Oswald", Arial, sans-serif;
